# rust-ai-agent-from-scratch

./: Cargo.toml  README.md
src/: main.rs  tools.rs
src/model/: adapter.rs  anthropic.rs  mod.rs  types.rs
