[package]
name = "agent-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.13.0", features = ["client", "transport-child-process"] }


# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2.1"
reqwest = { version = "0.13.2", features = ["json"] }



tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.44"
